==> Firmament-Autopilot/FMT-Firmware/target/coolfly/chuanyun_f2s/board/board.c <==
#include <firmament.h>
#include <board.h>
#include <board_device.h>
#include <shell.h>
#include <string.h>
    #include <cm_backtrace.h>
#include "board_device.h"
#include "driver/barometer/ms5611.h"
#include "driver/barometer/spl06.h"
#include "driver/gps/gps_ubx.h"
#include "driver/imu/bmi055.h"
#include "driver/imu/bmi088.h"
#include "driver/mag/ist8310.h"
#include "driver/mag/mmc5983ma.h"
#include "driver/mtd/ramtron.h"
#include "driver/mtd/spi_tfcard.h"
#include "driver/rgb_led/aw2023.h"
#include "driver/vision_flow/pmw3901_fl04.h"
#include "ntc.h"
#include "drv_adc.h"
#include "drv_gpio.h"
#include "drv_i2c.h"
#include "drv_pwm.h"
#include "drv_sdio.h"
#include "drv_spi.h"
#include "drv_systick.h"
#include "drv_usart.h"
#include "led.h"
#include "drv_buzzer_pwm.h"
#include "default_config.h"
#include "model/control/control_interface.h"
#include "model/fms/fms_interface.h"
#include "model/ins/ins_interface.h"
#include "module/console/console_config.h"
#include "module/file_manager/file_manager.h"
#include "module/mavproxy/mavproxy_config.h"
#include "module/param/param.h"
#include "module/pmu/power_manager.h"
#include "module/sensor/sensor_hub.h"
#include "module/sysio/actuator_cmd.h"
#include "module/sysio/actuator_config.h"
#include "module/sysio/gcs_cmd.h"
#include "module/sysio/mission_data.h"
#include "module/sysio/pilot_cmd.h"
#include "module/sysio/pilot_cmd_config.h"
#include "module/task_manager/task_manager.h"
#include "module/toml/toml.h"

void bsp_early_initialize(void)
{
    // /* Enable CPU L1-cache */
    // CPU_CACHE_Enable();

    HAL_GPIO_OutPut(WD_DONE_GPIO); // wd_done
    HAL_GPIO_SetPin(WD_DONE_GPIO, HAL_GPIO_PIN_SET);

#ifdef SENSOR_POWER_GPIO
    HAL_GPIO_OutPut(SENSOR_POWER_GPIO); //
    HAL_GPIO_SetPin(SENSOR_POWER_GPIO, HAL_GPIO_PIN_RESET);
#endif

    HAL_GPIO_OutPut(LINK_LED_GPIO); // blue led close
    HAL_GPIO_SetPin(LINK_LED_GPIO, HAL_GPIO_PIN_SET);

    HAL_GPIO_OutPut(VIDEO_LED_GPIO); // red led close
    HAL_GPIO_SetPin(VIDEO_LED_GPIO, HAL_GPIO_PIN_SET);

#ifdef RGB_R_GPIO
    HAL_GPIO_OutPut(RGB_R_GPIO); // rgb1 R led close
    HAL_GPIO_SetPin(RGB_R_GPIO, HAL_GPIO_PIN_RESET);
#endif

#ifdef RGB_G_GPIO
    HAL_GPIO_OutPut(RGB_G_GPIO); // rgb1 G led close
    HAL_GPIO_SetPin(RGB_G_GPIO, HAL_GPIO_PIN_RESET);
#endif

#ifdef RGB_B_GPIO
    HAL_GPIO_OutPut(RGB_B_GPIO); // rgb1 B led close
    HAL_GPIO_SetPin(RGB_B_GPIO, HAL_GPIO_PIN_RESET);
#endif

#ifdef SENSOR_POWER_GPIO
    HAL_GPIO_SetPin(SENSOR_POWER_GPIO, HAL_GPIO_PIN_SET);
#endif

#ifdef FUM_CTRL_GPIO
    HAL_GPIO_OutPut(FUM_CTRL_GPIO);
    HAL_GPIO_SetPin(FUM_CTRL_GPIO, HAL_GPIO_PIN_SET);
#endif

    /* init system heap */
    rt_system_heap_init((void*)SYSTEM_FREE_MEM_BEGIN, (void*)SYSTEM_FREE_MEM_END);

    dlog_set_output_level(4);

    STRU_HAL_SYS_CTL_CONFIG* pst_cfg;
    HAL_SYS_CTL_GetConfig(&pst_cfg);

    /* System clock initialization */
    /* ICATCH  DCATCH         */
    pst_cfg->u8_workMode = 0;
    HAL_SYS_CTL_Init(pst_cfg);

    SYS_EVENT_RegisterHandler(SYS_EVENT_ID_BB_EVENT, bb_led_status_EventHandler);

    // SystemClock_Config();

    /* usart driver init */
    RT_CHECK(drv_usart_init());

    /* init console to enable console output */
    FMT_CHECK(console_init());

    // console_println("------------------FMT Firmware---------------------");
    console_println("Build time: %s %s", __DATE__, __TIME__);

    DLOG_Init(NULL, NULL, DLOG_SERVER_PROCESSOR);
    DLOG_Process(NULL);

    /* systick driver init */
    RT_CHECK(drv_systick_init());

    /* system time module init */
    FMT_CHECK(systime_init());

    HAL_NV_Init();

    HAL_USB_ConfigPHY();

    /* gpio driver init */
    RT_CHECK(drv_gpio_init());

    /* spi driver init */
    RT_CHECK(drv_spi_init());

    /* i2c driver init */
    RT_CHECK(drv_i2c_init());

    /* pwm driver init */
    RT_CHECK(drv_pwm_init());

    /* buzzer pwm driver init */
    RT_CHECK(drv_buzzer_pwm_init());

    /* system statistic module */
    FMT_CHECK(sys_stat_init());
}

void bsp_initialize(void)
{
    /* enable on-board power supply */
    EnablePower();

    /* start recording boot log */
    FMT_CHECK(boot_log_init());

    /* init uMCN */
    FMT_CHECK(mcn_init());

    /* create workqueue */
    FMT_CHECK(workqueue_manager_init());
    FMT_CHECK(chuanyun_workqueue_manager_init());

    /* init storage devices */
    // RT_CHECK(drv_sdio_init());
    // console_println("drv_sdio_init~");

    /* fram init */
#ifdef USED_RAMTRON
    if (FMT_EOK != drv_ramtron_init("spi6_dev1")) {
        console_println("=================> can't find the ramtron on spi6_dev1");
    }
#endif

    if (FMT_EOK != drv_spi_tfcard_init("spi1_dev1", "tfcard")) {
        console_println("tfcard init failed!");
    }

    /* init file system */
    if (FMT_EOK != file_manager_init(mnt_table)) {
        console_println("=================> mtd first used => pleaserun:  mkfs mtdblk0 ");
    }

    /* init parameter system */
    FMT_CHECK(param_init());

    /* init usbd_cdc */
    // RT_CHECK(drv_usb_cdc_init());

    /* adc driver init */
    RT_CHECK(drv_adc_init());

    RT_CHECK(drv_aw2023_init("i2c3_dev1"));

    /* ist8310 and ncp5623c are on gps module and possibly it is not connected */
    // drv_ncp5623c_init("i2c3_dev1");

#if defined(FMT_USING_SIH) || defined(FMT_USING_HIL)
    FMT_CHECK(advertise_sensor_imu(0));
    FMT_CHECK(advertise_sensor_mag(0));
    FMT_CHECK(advertise_sensor_baro(0));
    FMT_CHECK(advertise_sensor_gps(0));
#else

    /* init onboard sensors */
    // RT_CHECK(drv_icm20600_init("spi2_dev1", "gyro0", "accel0"));
    // RT_CHECK(drv_icm20689_init("spi1_dev1", "gyro0", "accel0"));

    #ifdef USED_BMI055
    RT_CHECK(drv_bmi055_init("spi2_dev2", "spi2_dev3", "gyro0", "accel0", 0));
    #endif

    #ifdef USED_BMI088
    RT_CHECK(drv_bmi088_init("spi2_dev2", "spi2_dev3", "gyro0", "accel0", 0));
    #endif

    #ifdef USED_MS5611
    RT_CHECK(drv_ms5611_init("spi3_dev1", "barometer"));
    #endif

    #ifdef USED_SPL06
    RT_CHECK(drv_spl06_init("spi3_dev2", "barometer"));
    #endif

    /* if no gps mag then use onboard mag */
    #ifdef USED_IST8310
    if (drv_ist8310_init("i2c3_dev2", "mag1") != FMT_EOK) {
        console_println("!!!!!!drv_ist8310_init i2c3_dev2 faild~!!!!");
    } else {
        console_println("drv_ist8310_init i2c3_dev2~");
        FMT_CHECK(register_sensor_mag("mag1", 1));
    }
    #endif

    #ifdef USED_MMC5983MA
    if (drv_mmc5983ma_init("i2c2_dev2", "mag0") != FMT_EOK) {
        console_println("!!!!!!mmc5983ma i2c2_dev2 faild~!!!!");
    } else {
        FMT_CHECK(register_sensor_mag("mag0", 0));
    }
    #endif

    RT_CHECK(gps_ubx_init("serial1", "gps"));

    RT_CHECK(drv_ntc_init("adc9", "temp_board"));

    // if (tfmini_s_drv_init("serial4") != FMT_EOK) {
    //     console_println("!!!!!!tfmini_s serial4 faild~!!!!");
    // } else {
    //     FMT_CHECK(advertise_sensor_rangefinder(0));
    // }

    // if (lc307_drv_init("serial5") != FMT_EOK) {
    //     console_println("!!!!!!lc307 serial5 faild~!!!!");
    // }
    // else
    // {
    //     FMT_CHECK(advertise_sensor_optflow(0));
    // }

    // if (pmw3901_xx_drv_init("serial4") != FMT_EOK) {
    //     console_println("!!!!!!pmw3901_xx serial4 faild~!!!!");
    // } else {
    //     // console_println("======> pmw3901_xx serial4 success !!!!");
    //     FMT_CHECK(advertise_sensor_rangefinder(0));
    //     FMT_CHECK(advertise_sensor_optflow(0));
    // }

    if (pmw3901_fl04_drv_init("serial5") != FMT_EOK) {
        console_println("!!!!!!pmw3901_fl04 serial5 faild~!!!!");
    } else {
        // console_println("======> pmw3901_xx serial4 success !!!!");
        FMT_CHECK(advertise_sensor_rangefinder(0));
        FMT_CHECK(advertise_sensor_optflow(0));
    }

    /* register sensor to sensor hub */
    FMT_CHECK(register_sensor_imu("gyro0", "accel0", 0));

    FMT_CHECK(register_sensor_barometer("barometer"));

    FMT_CHECK(register_sensor_temperature("temp_board", 0));

#endif

    FMT_CHECK(register_ar_rc());
    FMT_CHECK(register_bb_com());

    /* init finsh */
    finsh_system_init();

    /* Mount finsh to console after finsh system init */
    FMT_CHECK(console_enable_input());

#ifdef FMT_USING_CM_BACKTRACE
    /* cortex-m backtrace */
    cm_backtrace_init("fmt_chuanyun_f2s", TARGET_NAME, FMT_VERSION);

#endif
}
